--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=egde">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Mi Proyecto{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+              integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6p6DdXjIemZI5gE2GdRgA4N25EiPT" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css')}}">
 </head>
 <body>
-    {% block body%}
-    {% endblock %}
-    <script src="{{ url_for('static', filename='js/layout.js') }}"></script>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('reservas') }}">Reservas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('novedades') }}">Novedades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container mt-4">
+        {% block content %}{% endblock %}
+    </div>
+
+    <!-- Agregar en la sección body de tu base.html -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-DmM1UI8OhXPmZheJZsT9+nC8OAXDC0RpsMyyxbs4E+JW9HWY6EHIjv0s8qNPJTJ"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6p6DdXjIemZI5gE2GdRgA4N25EiPT"
+            crossorigin="anonymous"></script>
 </body>
 </html>
