--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,9 @@
                     <a class="nav-link" href="{{ url_for('reservas') }}">Reservas</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('registro') }}">Registro</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('novedades') }}">Novedades</a>
                 </li>
                 <li class="nav-item">
