--- a/templates/registro.html
+++ b/templates/registro.html
@@ -3,7 +3,7 @@
 {% block title %}Registro{% endblock %}
 
 {% block content %}
-<h1>|Registro</h1>
+<h1>Registro</h1>
 <form method="post" action="{{ url_for('registro') }}">
     <div class="form-group">
         <label for="nombre">Nombre:</label>
