--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <h1>Registro</h1>
+
+<div class="container registro">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 bg-danger text-white py-4 rounded">
+            <h2 class="text-center mb-4">Registro</h2>
+
+            
+
 <form method="post" action="{{ url_for('registro') }}">
     <div class="form-group">
         <label for="nombre">Nombre:</label>
@@ -31,4 +39,13 @@
     </div>
     <button type="submit" class="btn btn-primary">Registrar</button>
 </form>
+            
+        </div>
+    </div>
+</div>
+
+
+
+
+
 {% endblock %}
