--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -37,16 +37,21 @@ body {
 
 .container .registro{
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100vh; /* Para que ocupe toda la altura visible */
-    margin-left: 50px;
+    left: 10vh;
+    margin-left: 200px;
 }
 
 /* Estilos específicos para el div del formulario */
 .bg-danger {
     /* Cambia el color de fondo a rojo */
-    background-color: #dc3545;
+    background-color: #dc3545; /* Cambia el color de fondo a rojo */
+    max-width: 800px; /* Cambia el ancho máximo del contenedor */
+    margin: 600px; /* Centra horizontalmente el contenedor */
+    margin-left: 200px;
+    padding: 20px; 
+
 }
 
 
