--- a/templates/registro.html
+++ b/templates/registro.html
@@ -23,7 +23,14 @@
     </div>
     <div class="form-group">
         <label for="tipo_documento">Tipo de Documento:</label>
-        <input type="text" class="form-control" id="tipo_documento" name="tipo_documento" required>
+        <label for="tipo_documento">Tipo de Documento:</label>
+        <select class="form-control" id="tipo_documento" name="tipo_documento" required>
+            <option value="" selected disabled>Selecciona el tipo de documento</option>
+            <option value="Tarjeta">Tarjeta de Identidad</option>
+            <option value="cedula">Cedula de Ciudadania</option>
+            <option value="Pasaporte">Pasaporte</option>
+            <!-- Agrega más opciones según los tipos de documentos que necesites -->
+        </select>
     </div>
     <div class="form-group">
         <label for="numero_documento">Número de Documento:</label>
