--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Bienvenidos al Hotel el Redil</h1>
+
+<div class="text-center">
+  <h1>Bienvenidos al Hotel el Redil</h1><br>
+</div>
 
   <div id="carouselExampleDark" class="carousel carousel-dark slide">
     <div class="carousel-indicators">
@@ -46,5 +49,45 @@
 
 
 
+  <section class="page-section" id="contact">
+    <div class="container">
+        <div class="text-center">
+            <br><h2 class="section-heading text-uppercase">Contactanos </h2><br>
+        </div>
 
+  <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+    <div class="row align-items-stretch mb-5">
+        <div class="col-md-6">
+            <div class="form-group">
+                <!-- Name input-->
+                <input class="form-control" id="name" type="text" placeholder="Nombre *" data-sb-validations="required" />
+                <div class="invalid-feedback" data-sb-feedback="name:required">Nombre</div>
+            </div>
+            <div class="form-group">
+                <!-- Email address input-->
+                <input class="form-control" id="email" type="email" placeholder="Email *" data-sb-validations="required,email" />
+                <div class="invalid-feedback" data-sb-feedback="email:required">Email</div>
+                <div class="invalid-feedback" data-sb-feedback="email:email">Email</div>
+            </div>
+            <div class="form-group mb-md-0">
+                <!-- Phone number input-->
+                <input class="form-control" id="phone" type="tel" placeholder="Teléfono *" data-sb-validations="required" />
+                <div class="invalid-feedback" data-sb-feedback="phone:required"></div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group form-group-textarea mb-md-0">
+                <!-- Message input-->
+                <textarea class="form-control" id="message" placeholder="Mensaje*" data-sb-validations="required"></textarea>
+                <div class="invalid-feedback" data-sb-feedback="message:required">Mensaje</div>
+            </div>
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary">Enviar</button><br>
+
+    <!-- Footer-->
+<br><footer class="py-5 bg-dark">
+  <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+</footer>
+    
 {% endblock %}
