--- a/templates/novedades.html
+++ b/templates/novedades.html
@@ -3,6 +3,40 @@
 {% block title %}Novedades en Hotel El Redil{% endblock %}
 
 {% block content %}
-<h1>HOTEL EL REDIL</h1>
-<p>¡Descubre las últimas novedades!</p>
+<div class="text-center">
+    <h1>HOTEL EL REDIL</h1>
+    <p>¡Descubre las últimas novedades!</p>
+  </div>
+
+
+<section class="showcase">
+    <div class="container-fluid p-0">
+        <div class="row g-0">
+            <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"> </div>
+            
+            <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                <h2>Santuario de las lajas</h2>
+                <p class="lead mb-0">El Santuario de Las Lajas, está ubicado en medio de los municipios de Ipiales y Potosí en donde los feligreses llegarán a celebrar, pero también a degustar de los platos típicos de la localidad.
+
+                    En estas festividades participan las comunidades de los municipios, así mismo de las veredas y corregimientos que en este 2023 festejarán por lo alto a la Patrona.  </p>
+            </div>
+        </div>
+        <div class="row g-0">
+            <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
+            <div class="col-lg-6 my-auto showcase-text">
+                <h2>Carnavales de blancos y negros</h2>
+                <p class="lead mb-0">Del 2 al 6 de Enero, visita Ipiales, el carnaval de Negros y Blancos. Una forma de reencontrarse, de reconstruirse y de darle al corazón los latidos necesarios para el nuevo año. Un ritual que te hace correr el riesgo de encontrar magia alegre por donde quiera que mires.
+                    Bienvenidos a la única fiesta donde pintarse la cara, es PATRIMONIO HUMANO !!!</p>
+            </div>
+        </div>
+        <div class="row g-0">
+            <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
+            <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                <h2>Festival Ipiales Cuna de Grandes Tríos</h2>
+                <p class="lead mb-0">Les compartimos la programación oficial del XV Festival Internacional #IpialesCunaDeGrandesTríos que contará con la participación especial de la Orquesta Sinfónica Nacional de Colombia y el maestro Bebo Cárdenas, la Ultima Voz de Los tres Reyes y su Trío.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 {% endblock %}
