--- a/templates/novedades.html
+++ b/templates/novedades.html
@@ -15,7 +15,7 @@
             <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"> </div>
             
             <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Santuario de las lajas</h2>z
+                <h2>Santuario de las lajas</h2>
                 <p class="lead mb-0">El Santuario de Las Lajas, está ubicado en medio de los municipios de Ipiales y Potosí en donde los feligreses llegarán a celebrar, pero también a degustar de los platos típicos de la localidad.
 
                     En estas festividades participan las comunidades de los municipios, así mismo de las veredas y corregimientos que en este 2023 festejarán por lo alto a la Patrona.  </p>
