--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,54 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <style>
+    body {
+        font-family: 'Arial', sans-serif;
+        background-color: #f8f9fa;
+        color: #495057;
+    }
+
+    .container {
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        margin-top: 20px;
+    }
+
+    h1, h2 {
+        color: #007bff;
+    }
+
+    p {
+        line-height: 1.6;
+    }
+</style>
+</head>
+<body>
+
+<div class="container mt-4">
+    <h1 class="mb-4">Sobre Nosotros</h1>
+
+    <section>
+        <h2>Descripción del Hotel</h2>
+        <p>¡Bienvenido al Hotel El Redil! Somos un hotel boutique que ofrece experiencias de alojamiento únicas y confortables. Nuestro hotel está ubicado en un entorno tranquilo y encantador, perfecto para aquellos que buscan relajarse y disfrutar de la hospitalidad excepcional.</p>
+    </section>
+
+    <section>
+        <h2>Misión</h2>
+        <p>Proporcionar a nuestros huéspedes una estancia inolvidable, ofreciendo servicios de alta calidad, comodidades excepcionales y atención personalizada. Nos esforzamos por crear un ambiente acogedor donde cada huésped se sienta como en casa.</p>
+    </section>
+
+    <section>
+        <h2>Visión</h2>
+        <p>Convertirnos en el destino preferido para quienes buscan experiencias de alojamiento excepcionales. Buscamos constantemente mejorar nuestros servicios, expandir nuestras instalaciones y ser reconocidos por la excelencia en la industria hotelera.</p>
+    </section>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-eNq8iqEAB5mzqc0GNEUjFuZJpTsUlvjs/J9aR5aFURqUto8JNt6l9b6f5KlVaGMr" crossorigin="anonymous"></script>
+<!-- Otros scripts o enlaces a archivos JS si es necesario -->
+
   <section class="page-section" id="contact">
     <div class="container">
         <div class="text-center">
