--- a/templates/layoutdas.html
+++ b/templates/layoutdas.html
@@ -52,7 +52,7 @@
                             </a>
                             
                             <div class="sb-sidenav-menu-heading">Addons</div>
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="Habidisponible.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Hab-Disponibles
                             </a>
