--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>{% block title %}Hotel El Redil{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-o3mO2+Fmz75kz3tPeS7QVjzQfn9GRwAhoIlOMYPmzSqe5IekF8tYiin5eB/tDOQV" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
               integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6p6DdXjIemZI5gE2GdRgA4N25EiPT" crossorigin="anonymous">
               <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css')}}">
