--- a/templates/Habidisponible.html
+++ b/templates/Habidisponible.html
@@ -1,5 +1,5 @@
 <!-- En templates/dashboard.html -->
-{% extends 'dashboard.html' %}
+{% extends 'layoutdas.html' %}
 
 {% block title %}Login{% endblock %}
 
