--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
               integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6p6DdXjIemZI5gE2GdRgA4N25EiPT" crossorigin="anonymous">
               <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css')}}">
+              <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
