--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,55 +1,19 @@
+<!-- En templates/login.html -->
 {% extends 'layout.html' %}
 
-{% block title %}Registro{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 
-<div class="container registro">
-    <div class="row">
-        <div class="col-md-6 offset-md-3 bg-danger text-white py-4 rounded">
-            <h2 class="text-center mb-4">Registro</h2>
-
-<form method="post" action="{{ url_for('registro') }}">
-    <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input type="text" class="form-control" id="nombre" name="nombre" required>
-    </div>
-    <div class="form-group">
-        <label for="apellido">Apellido:</label>
-        <input type="text" class="form-control" id="apellido" name="apellido" required>
-    </div>
-    <div class="form-group">
-        <label for="tipo_documento">Tipo de Documento:</label>
-        <label for="tipo_documento">Tipo de Documento:</label>
-        <select class="form-control" id="tipo_documento" name="tipo_documento" required>
-            <option value="" selected disabled>Selecciona el tipo de documento</option>
-            <option value="Tarjeta">Tarjeta de Identidad</option>
-            <option value="cedula">Cedula de Ciudadania</option>
-            <option value="Pasaporte">Pasaporte</option>
-            <!-- Agrega más opciones según los tipos de documentos que necesites -->
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="numero_documento">Número de Documento:</label>
-        <input type="text" class="form-control" id="numero_documento" name="numero_documento" required>
-    </div>
-    <div class="form-group">
-        <label for="correo">Correo Electrónico:</label>
-        <input type="email" class="form-control" id="correo" name="correo" required>
-    </div>
-    <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Registrar</button>
-</form>
-            
-        </div>
-    </div>
-</div>
-
-
-
-
+<section class="form-register">
+    <h4>Formulario Registro</h4>
+    <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
+    <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
+    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
+    <input class="controls" type="password" name="correo" id="correo" placeholder="Ingrese su Contraseña">
+    <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
+    <input class="botons" type="submit" value="Registrar">
+    <p><a href="#">¿Ya tengo Cuenta?</a></p>
+  </section>
 
 {% endblock %}
