--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,8 @@
 <h1>Login</h1>
 <form method="post" action="{{ url_for('login') }}">
     <div class="form-group">
-        <label for="email">Correo electrónico:</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+        <label for="text">Correo electrónico:</label>
+        <input type="text" class="form-control" id="email" name="email" required>
     </div>
     <div class="form-group">
         <label for="password">Contraseña:</label>
