--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,21 @@
       <div class="col-md-4">
           <div class="card">
               <div class="card-body">
-                  <h5 class="card-title">Información del Hotel</h5>
-                  <p class="card-text">Aquí puedes agregar información sobre el Hotel El Redil. Puedes incluir detalles como la dirección, servicios, etc.</p>
+                  <h5 class="card-title">Servicios más Populares</h5>
+                  <p class="card-text">
+                    <ul class="services-list">
+                        <li class="services-list-item"><span class="services-icon">📶</span>WiFi gratis</li>
+                        <li class="services-list-item"><span class="services-icon">🚐</span>Traslado aeropuerto </li>
+                        <li class="services-list-item"><span class="services-icon">🅿️</span>Parking gratis</li>
+                        <li class="services-list-item"><span class="services-icon">👨‍👩‍👧‍👦</span>Habitaciones familiares</li>
+                        <li class="services-list-item"><span class="services-icon">🍽️</span>Restaurante</li>
+                        <li class="services-list-item"><span class="services-icon">🚭</span>Habitaciones sin humo</li>
+                        <li class="services-list-item"><span class="services-icon">🕒</span>Recepción 24 horas</li>
+                        <li class="services-list-item"><span class="services-icon">🛏️</span>Servicio de habitaciones</li>
+                        <li class="services-list-item"><span class="services-icon">🍸</span>Bar</li>
+                        <li class="services-list-item"><span class="services-icon">🥞</span>Buen desayuno</li>
+                    </ul>
+                  </p>
               </div>
           </div>
       </div>
