--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,11 @@
 
 {% block content %}
 
-<div class="text-center">
-  <h1>Bienvenidos al Hotel el Redil</h1><br>
-</div>
-<body>
+<header class="bg-dark py-5">
+    <div class="text-center text-white">
+        <h1 class="display-4 fw-bolder">Bienvenidos al Hotel el Redil</h1>
+    </div>
+</header>
 
 <div class="container mt-4">
     <h1 class="mb-4">Sobre Nosotros</h1>
@@ -95,5 +96,10 @@
         </div>
     </div>
     <button type="button" class="btn btn-primary">Enviar</button><br>
+
+            <!-- Footer-->
+    <br><footer class="py-5 bg-dark">
+      <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+    </footer>
 
 {% endblock %}
