--- a/templates/novedades.html
+++ b/templates/novedades.html
@@ -4,10 +4,12 @@
 
 {% block content %}
 <div class="text-center">
-    <h1>HOTEL EL REDIL</h1>
-    <p>¡Descubre las últimas novedades!</p>
-  </div>
-
+    <header class="bg-dark py-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Hotel el Redil</h1>
+            <p class="lead fw-normal text-white-50 mb-0">¡Descubre las últimas novedades!</p>
+        </div>
+</header>
 
 <section class="showcase">
     <div class="container-fluid p-0">
