--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,5 +1,6 @@
 /* Estilo general para el body */
 body {
+  background-color: #ffffff;
     padding-top: 56px; /* Ajuste para evitar que el contenido esté detrás de la barra de navegación */
 }
 
@@ -21,7 +22,7 @@ body {
   max-width: 1200px;
   margin: 20px auto;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0);
   padding: 20px;
   margin-top: 20px;
 }
@@ -41,14 +42,14 @@ section {
   display: flex;
   align-items: center;
   padding: 10px;
-  background-color: #f8d7da;
+  background-color: #b0aeee;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(229, 223, 223, 0.1);
   transition: background-color 0.3s ease;
 }
 
 .services-list-item:hover {
-  background-color: #f5c6cb;
+  background-color: rgb(198, 200, 245);
 }
 
 .services-icon {
@@ -59,7 +60,7 @@ section {
 /* Estilo para el texto en la barra de navegación */
 .navbar-brand,
 .navbar-nav .nav-link {
-    color: #ffffff; /* Color del texto */
+    color: rgb(255, 255, 255); /* Color del texto */
 }
 
 
